infra/k8s/cart-depl-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-mongo
  template:
    metadata:
      labels:
        app: cart-mongo
    spec:
      containers:
      - image: mongo
        name: cart-mongo
---
apiVersion: v1
kind: Service
metadata:
  name: cart-mongo-srv
spec:
  selector:
    app: cart-mongo
  ports:
  - name: cart-mongo
    protocol: TCP
    port: 27017
    targetPort: 27017
