infra/k8s/favorites-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: favorites-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: favorites
  template:
    metadata:
      labels:
        app: favorites
    spec:
      containers:
      - name: favorites
        image: us.gcr.io/e-commerce-365907/favorites
---
apiVersion: v1
kind: Service
metadata:
  name: favorites-srv
spec:
  selector:
    app: favorites
  ports:
  - name: favorites
    targetPort: 4003
    port: 4003
    protocol: TCP
