infra/k8s/mail-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail
  template:
    metadata:
      labels:
        app: mail
    spec:
      containers:
      - name: mail
        image: us.gcr.io/e-commerce-365907/mail
---
apiVersion: v1
kind: Service
metadata:
  name: mail-srv
spec:
  selector:
    app: mail
  ports:
  - name: mail
    protocol: TCP
    port: 4002
    targetPort: 4002
