infra/k8s/nats-streaming-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-strming-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats-streaming
  template:
    metadata:
      labels:
        app: nats-streaming
    spec:
      containers:
      - name: nats-streaming
        image: nats-streaming:0.17.0
        args: ['-p', '4222', '-m', '8222', '-hbi', '5s', '-hbt', '5s', '-hbf', '2', '-SD', '-cid', 'planty']
---
apiVersion: v1
kind: Service
metadata:
  name: nats-streaming-srv
spec:
  selector:
    app: nats-streaming
  ports:
  - name: client
    port: 4222
    targetPort: 4222
    protocol: TCP
  - name: monitoring
    port: 8222
    targetPort: 8222
    protocol: TCP
