infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: e-commerce.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-srv
            port:
              number: 3000
      - path: /api/users/
        pathType: Prefix
        backend:
          service:
            name: auth-srv
            port:
              number: 4000
